# Terraria-EFMod

./: .gitmodules  README.md
Accessorize/: CMakeLists.txt  efmod.cpp
ForgottenItem/: CMakeLists.txt  README.md
ForgottenItem/BNM-Android-master/include/BNM/UserSettings/: GlobalSettings.hpp
ForgottenItem/EFMod/: mod.json
ForgottenItem/includes/forgottenitem/: EFMod.hpp  Item.hpp  ItemID.hpp  Recipe.hpp
ForgottenItem/mod/: efmod.toml
ForgottenItem/src/: CMakeLists.txt  Item.cpp  ItemID.cpp  Recipe.cpp  efmod.cpp
ForgottenItem/src/BNM-Android-master/include/BNM/: BasicMonoStructures.hpp
ForgottenItem/src/BNM-Android-master/include/BNM/UserSettings/: GlobalSettings.hpp
ForgottenItem/src/includes/forgottenitem/: IL2CppArray.hpp  Item.hpp  ItemID.hpp  Recipe.hpp  log.hpp
ForgottenItem/src/src/: Item.cpp  ItemID.cpp  Recipe.cpp  efmod.cpp  modx.cpp
Overclock/: CMakeLists.txt  (+1 more)
efmod/ForgottenItem/: CMakeLists.txt
efmod/ForgottenItem/includes/: item.hpp  item_drop_database.hpp  item_id.hpp  logger.hpp  prefix_legacy.hpp  recipe.hpp  utility.hpp
efmod/ForgottenItem/mod/: efmod.toml
efmod/ForgottenItem/src/: efmod.cpp  item.cpp  item_drop_database.cpp  item_id.cpp  prefix_legacy.cpp  recipe.cpp
efmod/VeinMiner/: CMakeLists.txt
efmod/VeinMiner/includes/: config.hpp  tefmod.hpp  tile_data.hpp  vein_miner.hpp
efmod/VeinMiner/mod/: efmod.icon  efmod.toml
efmod/VeinMiner/src/: efmod.cpp  tile_data.cpp  vein_miner.cpp
modx/TerraFormats/: CMakeLists.txt  README.md
modx/TerraFormats/includes/: EFMod.hpp
modx/TerraFormats/includes/TerraFormats/: Item.hpp  LanguageManager.hpp  LanguagePacks.hpp  Log.hpp  TerraFormats.hpp
modx/TerraFormats/mod/: efmod.icon  efmod.toml
modx/TerraFormats/page/androidMain/kotlin/eternal/future/tefmodcommon/: EFModPage.kt  MainActivity.kt  Platform.android.kt
modx/TerraFormats/page/commonMain/kotlin/eternal/future/tefmodcommon/: App.kt  Greeting.kt  Platform.kt
modx/TerraFormats/page/desktopMain/kotlin/eternal/future/tefmodcommon/: Platform.jvm.kt  main.kt
modx/TerraFormats/src/: Item.cpp  LanguageManager.cpp  LanguagePacks.cpp  Modx.cpp  TerraFormats.cpp
modx/TexturePack/: CMakeLists.txt
modx/TexturePack/includes/: PerfMonitor.hpp
modx/TexturePack/includes/TexturePack/: LoadTexture2D.hpp  Log.hpp  PNGDecoder.hpp  Texture2DConverter.hpp  TexturePack.hpp
modx/TexturePack/mod/: efmod.toml
modx/TexturePack/page/androidMain/kotlin/eternal/future/texturepack/: EFModPage.kt  MainActivity.kt  Platform.android.kt
modx/TexturePack/page/androidMain/res/values/: strings.xml
modx/TexturePack/page/commonMain/composeResources/drawable/: compose-multiplatform.xml
modx/TexturePack/src/: LoadTexture2D.cpp  PNGDecoder.cpp  Texture2DConverter.cpp  TexturePack.cpp
(+52 files in other folders)
